Add build task please

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,8 +4,8 @@ pool:
      -npm
 
 steps:
--  task:DotNetCoreInstaller@0
-   displayName: 'Use NET Core SDK'
+-  task: DotNetCoreInstaller@0
+   displayName: 'Use .NET Core SDK 2.1.505'
    inputs: 
       version: 2.1.505
 
