--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ steps:
   displayName: 'Node Install'
   inputs: 
        versionSpec: '6.x'
-- script: 'which task'
+- script: 'which node'
 
 - task: Npm@1
   displayName: 'Run npm install'
